--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Lavaca Developer Tools",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Helps in debugging Lavaca web applications",
   "icons": {
     "128": "src/img/icon-144x144.png"
@@ -18,6 +18,7 @@
       "node_modules/lavaca/src/js/libs/jquery-2.0.0.js",
       "src/js/content_script.js"
     ],
+    "css": ["src/css/injected-styles.css"],
     "run_at": "document_start"
   }],
   "web_accessible_resources": ["src/js/attach.js"]
